:bug: fix about section on mobile

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -611,7 +611,7 @@ nav {
     .photo-list {
         figure {
             figcaption {
-                top: 234px;
+                transform: translateY(234px)none;;
             }
         }
     }
